[gd_scene load_steps=8 format=2]

[ext_resource path="res://Weapons/Proj_Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Circle.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Proj_AOE.gd" type="Script" id=3]
[ext_resource path="res://Components/PlaySound2D.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/Qtestr_exp3.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/AOE_Player_ParticlesMaterial.tres" type="Material" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[node name="Proj_AOE" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )
damage_amount = 4
piercing = true
life_time = 1.5
move_state_path = NodePath("")
early_collision_disable_time = 0.1

[node name="Sprite" parent="." index="0"]
modulate = Color( 2, 0, 0, 0 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." index="2"]
collision_mask = 28

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Move_Behaviour" parent="." index="5"]
script = null

[node name="Particles2D" type="Particles2D" parent="." index="6"]
modulate = Color( 1, 1, 1.4, 1 )
scale = Vector2( 1.6, 1.6 )
emitting = false
amount = 200
lifetime = 0.2
one_shot = true
explosiveness = 0.3
process_material = ExtResource( 6 )

[node name="DeactivationTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlaySound2D" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 5 )
volume_db = -6.0
autoplay = true
script = ExtResource( 4 )

[connection signal="timeout" from="DeactivationTimer" to="." method="_on_DeactivationTimer_timeout"]

[editable path="Hitbox"]
